--- a/charts/rclone/values.yaml
+++ b/charts/rclone/values.yaml
@@ -7,6 +7,7 @@ replicaCount: 1
 paths:
   data: /mnt/gdrive
   cache: /mnt/storagebox
+  storagebox: /mnt/newstoragebox
 
 image:
   repository: rclone/rclone
