--- a/charts/rclone/values.yaml
+++ b/charts/rclone/values.yaml
@@ -1,7 +1,3 @@
-# Default values for rclone.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
 
 paths:
@@ -11,58 +7,25 @@ paths:
 
 image:
   repository: rclone/rclone
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
+  pullPolicy: Always
   tag: "latest"
 
-imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
   create: true
-  # Annotations to add to the service account
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
   name: ""
-
 podAnnotations: {}
-
 podSecurityContext:
   {}
   # fsGroup: 2000
-
 securityContext:
   privileged: true
   capabilities:
     add:
       - SYS_ADMIN
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 5572
-
-ingress:
-  enabled: false
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    external-dns.alpha.kubernetes.io/target: lavandadelpatio.es
-    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.lavandadelpatio.es/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
-    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:80/oauth2/auth"
-  hosts:
-    - host: rclone.lavandadelpatio.es
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-
 resources:
   limits:
     cpu: 2000m
@@ -71,15 +34,6 @@ resources:
     cpu: 400m
     memory: 512Mi
 
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
 nodeSelector: {}
-
 tolerations: []
-
 affinity: {}
