--- a/charts/rclone/templates/daemonset.yaml
+++ b/charts/rclone/templates/daemonset.yaml
@@ -36,7 +36,7 @@ spec:
             path: {{ .Values.paths.cache }}       
         - name: config-data
           configMap:
-            name: rclone-config
+            name: {{ .Values.configmap.name}}
             items:
               - key: rclone.conf
                 path: rclone.conf
