Plex, radarr y sonarr

--- a/charts/plex/values.yaml
+++ b/charts/plex/values.yaml
@@ -20,7 +20,7 @@ volumes:
     size: 50Gi
   data:   
     enabled: true 
-    hostPath: /mnt/gdrive
+    hostPath: /mnt/gdrive-reader  
 
 nodeSelector: 
   node.kubernetes.io/usage: plex
