--- a/charts/sonarr/templates/pvc.yaml
+++ b/charts/sonarr/templates/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "sonarr.fullname" . }}-config-volume
+  name: {{ include "sonarr.fullname" . }}-config
 spec:
   accessModes:
     - "ReadWriteOnce"
