--- a/charts/sonarr/values.yaml
+++ b/charts/sonarr/values.yaml
@@ -12,21 +12,17 @@ environmentVariables:
   - name: PGID
     value: "1000"
   - name: TZ
-    value: "Europe/Madrid" 
-paths:
-  media: /mnt/gdrive
+    value: "Europe/Madrid"
+googleDrive:
+  localPath: /mnt/gdrive-reader      
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
   create: true
-  # Annotations to add to the service account
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
   name: ""
 
 podAnnotations: {}
