--- a/charts/sonarr/values.yaml
+++ b/charts/sonarr/values.yaml
@@ -14,7 +14,7 @@ environmentVariables:
   - name: TZ
     value: "Europe/Madrid"
 googleDrive:
-  localPath: /mnt/gdrive-reader      
+  localPath: /mnt/rclone-reader      
 
 imagePullSecrets: []
 nameOverride: ""
