--- a/charts/qbittorrentvpn/templates/deployment.yaml
+++ b/charts/qbittorrentvpn/templates/deployment.yaml
@@ -41,9 +41,9 @@ spec:
         - name: scripts
           configMap:
             name: qbittorrent-scripts   
-        - name: config-vpn
-          configMap:
-            name: qbittorrent-wireguard                        
+        # - name: config-vpn
+        #   configMap:
+        #     name: qbittorrent-wireguard                        
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -65,8 +65,8 @@ spec:
               name: data
             - mountPath: /etc/localtime
               name: etc-localtime   
-            - mountPath: /config/wireguard
-              name: config-vpn                 
+            # - mountPath: /config/wireguard
+            #   name: config-vpn                 
           ports:
             - name: privoxy
               containerPort: 8181
