--- a/charts/qbittorrentvpn/templates/statefulset.yaml
+++ b/charts/qbittorrentvpn/templates/statefulset.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: {{ include "qbittorrentvpn.fullname" . }}
   labels:
@@ -7,6 +7,7 @@ metadata:
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
+  serviceName: {{ include "qbittorrentvpn.fullname" . }}
   {{- end }}
   selector:
     matchLabels:
@@ -40,10 +41,7 @@ spec:
             path: /etc/localtime
         - name: scripts
           configMap:
-            name: qbittorrent-scripts   
-        # - name: config-vpn
-        #   configMap:
-        #     name: qbittorrent-wireguard                        
+            name: qbittorrent-scripts                           
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
