--- a/charts/plex/templates/service.yaml
+++ b/charts/plex/templates/service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "plex.fullname" . }}
   labels:
     {{- include "plex.labels" . | nindent 4 }}
+  annotations: 
+    {{- toYaml .Values.service.annotations | nindent 4 }}  
 spec:
   type: {{ .Values.service.type }}
   ports:
