--- a/charts/filebot-executor/templates/deployment.yaml
+++ b/charts/filebot-executor/templates/deployment.yaml
@@ -91,14 +91,10 @@ spec:
             - name: FILEBOT_TEST_ENABLED
               value: {{ .Values.filebot.testEnabled | quote }}          
           livenessProbe:
-            httpGet:
-              path: /actuator/health/liveness
-              port: 8080
-              scheme: HTTP
-            initialDelaySeconds: 60
-            periodSeconds: 60
-            successThreshold: 1
-            failureThreshold: 5
+            exec:
+              command:
+                - "ls" 
+                - "/media-output"
           readinessProbe:
             httpGet:
               path: /actuator/health/readiness
