--- a/charts/plex/templates/statefulset.yaml
+++ b/charts/plex/templates/statefulset.yaml
@@ -53,14 +53,10 @@ spec:
               value: "{{ .value }}"
             {{- end }}     
           livenessProbe:
-            httpGet:
-              path: /identity
-              port: 32400
-            initialDelaySeconds: 15  
-            periodSeconds: 5
-            timeoutSeconds: 5
-            failureThreshold: 6
-            successThreshold: 1  
+            exec:
+              command:
+                - "ls" 
+                - "/media"
           readinessProbe:
             httpGet:
               path: /identity
