--- a/charts/qbittorrentvpn/values.yaml
+++ b/charts/qbittorrentvpn/values.yaml
@@ -1,11 +1,37 @@
 paths:
-  torrents: /mnt/rclone-writer/Torrenting
+  torrents: /mnt/rclone-writer 
 replicaCount: 1
 image:
   repository: binhex/arch-qbittorrentvpn
   pullPolicy: Always
   tag: 4.5.0-1-01       
-
+environmentVariables:
+  - name: VPN_ENABLED
+    value: "no" 
+  - name: VPN_PROV
+    value: airvpn
+  - name: VPN_CLIENT
+    value: openvpn
+  - name: ENABLE_PRIVOXY
+    value: "no"
+  - name: LAN_NETWORK 
+    value: 0.0.0.0/0
+  - name: NAME_SERVERS 
+    value: 84.200.69.80,37.235.1.174,1.1.1.1,37.235.1.177,84.200.70.40,1.0.0.1
+  - name: VPN_INPUT_PORTS  
+    value: 1234 
+  - name: VPN_OUTPUT_PORTS  
+    value: 5678 
+  - name: DEBUG 
+    value: true 
+  - name: WEBUI_PORT 
+    value: 8080
+  - name: UMASK 
+    value: 000
+  - name: PUID 
+    value: 0
+  - name: PGID 
+    value: 0 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
